<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_menu_slideshow"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/theme"
        android:icon="@drawable/ic_menu_slideshow"
        android:orderInCategory="100"
        android:title="@string/action_theme"
        app:showAsAction="never" />
    <item
        android:id="@+id/order"
        android:icon="@drawable/ic_menu_slideshow"
        android:orderInCategory="100"
        android:title="@string/action_order"
        app:showAsAction="never" />
    <item
        android:id="@+id/account"
        android:icon="@drawable/ic_menu_slideshow"
        android:orderInCategory="100"
        android:title="@string/action_account"
        app:showAsAction="never" />
</menu>
